# HomeAssignments

Assignment1/: Makefile  README.md  hello.cpp  hello.h  main.cpp
Assignment2/a/: Makefile  README.md  file_utils.cpp  file_utils.h  main.cpp
Assignment2/b/: Makefile  README.md  main.cpp  rpn_calculator.cpp  rpn_calculator.h
Assignment3/: Alliance.cpp  Alliance.cpp.orig  Alliance.h  Alliance.h.orig  Autobot.cpp  Autobot.cpp.orig  Autobot.h  Autobot.h.orig  Decepticon.cpp  Decepticon.cpp.orig  Decepticon.h  Decepticon.h.orig  Gun.cpp  Gun.cpp.orig  Gun.h  Gun.h.orig  Makefile  Pretender.cpp  Pretender.cpp.orig  Pretender.h  Pretender.h.orig  README.md  Transformer.cpp  Transformer.cpp.orig  Transformer.h  Transformer.h.orig  main.cpp  main.cpp.orig
Assignment3/src/: Alliance.cpp  Alliance.h  Autobot.cpp  Autobot.h  Decepticon.cpp  Decepticon.h  Gun.cpp  Gun.h  Pretender.cpp  Pretender.h  Transformer.cpp  Transformer.h
Assignment3/tests/: TransformerTests.cpp
Assignment5/: CMakeLists.txt  README.md
Assignment5/src/: Matrix.h  Rational.cpp  Rational.h
Assignment5/tests/: MatrixTests.cpp
